k8s/nginx-ingress-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      containers:
        - name: ingress-nginx-controller
          image: nginx-ingress-controller:latest # You can specify a version here
          args:
            - /nginx-ingress-controller
            - "--configmap=$(POD_NAMESPACE)/ingress-nginx"
            - "--default-backend-service=$(POD_NAMESPACE)/default-http-backend"
            - "--publish-service=$(POD_NAMESPACE)/ingress-nginx-controller"
            - "--election-id=ingress-controller-leader"
            - "--ingress-class=nginx"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          volumeMounts:
            - name: nginx-ingress
              mountPath: /etc/nginx
              readOnly: true
      volumes:
        - name: nginx-ingress
          configMap:
            name: ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
  labels:
    app: ingress-nginx
spec:
  selector:
    app: ingress-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
    - port: 443
      targetPort: 443
      nodePort: 30443
      protocol: TCP
  type: NodePort
